--- a/index.html
+++ b/index.html
@@ -42,300 +42,24 @@
           </li>
         </ul>
       </div>
+      <div class="js_push_header"></div>
     </header>
 
-    <main>
-      <div class="bgimg">
-        <div class="flex_btn">
-          <div class="text_logo">CoffeeKing</div>
-          <div class="btn">
-            <a class="products">Посмотреть товары</a>
-          </div>
-        </div>
-      </div>
-      <!-- <div class="container"> -->
-      <!-- <section>
-            <div class="h1">Наш товар</div>
-            <div class="coffee">
-              <div class="coffee_items">
-                <div class="container_wrap">
-                  <div>
-                    <a href="#"
-                      ><img class="img_buy" src="./imgs/coffee1.jpg" alt="coffee"
-                    /></a>
-                  </div>
-                  <div>
-                    <div class="h3">Кофейная канефора</div>
-                    Duis et aliquam orci. Vivamus augue quam, sollicitudin quis
-                    bibendum quis, eleifend vitae velit.
-                    <div class="price">$23.05</div>
-                  </div>
-                  <div class="add_button">
-                    <a class="add_to_buy" href="#">Посмотреть</a>
-                  </div>
-                </div>
-              </div>
-              <div class="coffee_items">
-                <div class="container_wrap">
-                  <div>
-                    <a href="#"
-                      ><img class="img_buy" src="./imgs/coffee2.jpg" alt="coffee"
-                    /></a>
-                  </div>
-                  <div>
-                    <div class="h3">Кофейное зерно</div>
-                    Duis et aliquam orci. Vivamus augue quam, sollicitudin quis
-                    bibendum quis, eleifend vitae velit.
-                    <div class="price">$24.66</div>
-                  </div>
-                  <div class="add_button">
-                    <a class="add_to_buy" href="#">Посмотреть</a>
-                  </div>
-                </div>
-              </div>
-              <div class="coffee_items">
-                <div class="container_wrap">
-                  <div>
-                    <a href="#"
-                      ><img class="img_buy" src="./imgs/coffee3.jpg" alt="coffee"
-                    /></a>
-                  </div>
-                  <div>
-                    <div class="h3">Эфиопский аромат</div>
-                    Duis et aliquam orci. Vivamus augue quam, sollicitudin quis
-                    bibendum quis, eleifend vitae velit.
-                    <div class="price">$9.00-19.99$</div>
-                  </div>
-                  <div class="add_button">
-                    <a class="add_to_buy" href="#">Посмотреть</a>
-                  </div>
-                </div>
-              </div>
-              <div class="coffee_items">
-                <div class="container_wrap">
-                  <div class="image">
-                    <p class="p"><span>SALE!</span></p>
-                    <a href="#"
-                      ><img class="img_buy" src="./imgs/coffee4.jpg" alt="coffee"
-                    /></a>
-                  </div>
-                  <div>
-                    <div class="h3">Кофейная чашка</div>
-                    Duis et aliquam orci. Vivamus augue quam, sollicitudin quis
-                    bibendum quis, eleifend vitae velit.
-                    <div class="del">
-                      <del><span>$23.00</span></del
-                      ><span class="price">19.00$</span>
-                    </div>
-                  </div>
-                  <div class="add_button">
-                    <a class="add_to_buy" href="#">Посмотреть</a>
-                  </div>
-                </div>
-              </div>
-              <div class="coffee_items">
-                <div class="container_wrap">
-                  <div>
-                    <a href="#"
-                      ><img class="img_buy" src="./imgs/coffee5.jpg" alt="coffee"
-                    /></a>
-                  </div>
-                  <div>
-                    <div class="h3">Молотый кофе</div>
-                    Duis et aliquam orci. Vivamus augue quam, sollicitudin quis
-                    bibendum quis, eleifend vitae velit.
-                    <div class="price">$13.44</div>
-                  </div>
-                  <div class="add_button">
-                    <a class="add_to_buy" href="#">Посмотреть</a>
-                  </div>
-                </div>
-              </div>
-              <div class="coffee_items">
-                <div class="container_wrap">
-                  <div>
-                    <a href="#"
-                      ><img class="img_buy" src="./imgs/coffee6.jpg" alt="coffee"
-                    /></a>
-                  </div>
-                  <div>
-                    <div class="h3">Американский черный кофе</div>
-                    Duis et aliquam orci. Vivamus augue quam, sollicitudin quis
-                    bibendum quis, eleifend vitae velit.
-                    <div class="price">$14.00</div>
-                  </div>
-                  <div class="add_button">
-                    <a class="add_to_buy" href="#">Посмотреть</a>
-                  </div>
-                </div>
-              </div>
-              <div class="coffee_items">
-                <div class="container_wrap">
-                  <div>
-                    <a href="#"
-                      ><img class="img_buy" src="./imgs/coffee7.jpg" alt="coffee"
-                    /></a>
-                  </div>
-                  <div>
-                    <div class="h3">Аксессуар "Кепка"</div>
-                    Duis et aliquam orci. Vivamus augue quam, sollicitudin quis
-                    bibendum quis, eleifend vitae velit.
-                    <div class="price">$4.99</div>
-                  </div>
-                  <div class="add_button">
-                    <a class="add_to_buy" href="#">Посмотреть</a>
-                  </div>
-                </div>
-              </div>
-  
-              <div class="coffee_items">
-                <div class="container_wrap">
-                  <div>
-                    <a href="#"
-                      ><img class="img_buy" src="./imgs/coffee8.jpg" alt="coffee"
-                    /></a>
-                  </div>
-                  <div>
-                    <div class="h3">Кофейные конфеты</div>
-                    Duis et aliquam orci. Vivamus augue quam, sollicitudin quis
-                    bibendum quis, eleifend vitae velit.
-                    <div class="price">$7.56</div>
-                  </div>
-                  <div class="add_button">
-                    <a class="add_to_buy" href="#">Посмотреть</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-        </div>
-        <div class="map_container">
-          <div class="container">
-            <section>
-              <div class="map_wrap">
-                <div class="h2 map_text">Где мы берем наше кофе?</div>
-                <br />
-                <div class="map_text2">
-                  Sed sagittis sodales lobortis. Curabitur in eleifend turpis, id
-                  vehicula odio. Donec pulvinartellus eget magna aliquet
-                  ultricies. Praesent gravida hendreritex, nec eleifend
-                  semconvallis vitae. Ortis. Curabitur in eleifend turpis, id
-                  vehicula odio. Donec pulvinartellus eget magna aliquet
-                  ultricies. Praesent gravida hendreritex, nec eleifend
-                  semconvallis vitae.Sed sagittis sodales lobortis. Curabitur in
-                  eleifend turpis, id vehicula odio. Rect pu magna aliquet
-                  ultricies. Praesent gravida hendreritex, nec eleifend semco.
-                </div>
-                <div class="map_width">
-                  <img class="map" src="./imgs/map.png" alt="map" />
-                </div>
-                <ul class="li_grid">
-                  <li class="ul_child">
-                    <a href="#">Канада<span class="mini">(24)</span></a>
-                  </li>
-                  <li class="ul_child">
-                    <a href="#">США<span class="mini">(37)</span></a>
-                  </li>
-                  <li class="ul_child">
-                    <a href="#">Мексика<span class="mini">(4)</span></a>
-                  </li>
-  
-                  <li class="ul_child">
-                    <a href="#">Бразилия<span class="mini">(86)</span></a>
-                  </li>
-                  <li class="ul_child">
-                    <a href="#">Аргентина<span class="mini">(13)</span></a>
-                  </li>
-                  <li class="ul_child">
-                    <a href="#">Европа<span class="mini">(66)</span></a>
-                  </li>
-  
-                  <li class="ul_child">
-                    <a href="#">Россия<span class="mini">(12)</span></a>
-                  </li>
-                  <li class="ul_child">
-                    <a href="#">Азия<span class="mini">(3)</span></a>
-                  </li>
-                  <li class="ul_child">
-                    <a href="#">Австралия<span class="mini">(41)</span></a>
-                  </li>
-                </ul>
-              </div>
-            </section>
-          </div>
-        </div>
-        <div class="container">
-          <div class="sponsors">
-            <div>
-              <img
-                class="sponsors_img"
-                src="./imgs/sponsors1.png"
-                alt="sponsor"
-              />
-            </div>
-            <div>
-              <img
-                class="sponsors_img"
-                src="./imgs/sponsors2.png"
-                alt="sponsor"
-              />
-            </div>
-            <div>
-              <img
-                class="sponsors_img"
-                src="./imgs/sponsors3.png"
-                alt="sponsor"
-              />
-            </div>
-  
-            <div>
-              <img
-                class="sponsors_img"
-                src="./imgs/sponsors4.png"
-                alt="sponsor"
-              />
-            </div>
-            <div>
-              <img
-                class="sponsors_img"
-                src="./imgs/sponsors5.png"
-                alt="sponsor"
-              />
-            </div>
-            <div>
-              <img
-                class="sponsors_img"
-                src="./imgs/sponsors6.png"
-                alt="sponsor"
-              />
+    <div class="js_push">
+      <main>
+        <div class="bgimg">
+          <div class="flex_btn">
+            <div class="text_logo">CoffeeKing</div>
+            <div class="btn">
+              <a class="products">Посмотреть товары</a>
             </div>
           </div>
         </div>
-        <div class="testimonials">
-          <div class="container">
-            <div class="testimonials_text">Отзывы</div>
-            <div class="inner">
-              <span class="medium">
-                Patrik James
-                <br />
-                <span class="mini">дизайнер</span>
-              </span>
-              <br />
-              <span class="testimonials_wrap medium"
-                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-                voluptatum suscipit sunt ratione libero placeat, cumque odio
-                consequatur! Nemo, soluta distinctio sapiente a sunt amet officia
-                voluptatem quis quidem. Repellat maxime voluptas quo, temporibus
-                iusto, dolore mollitia animi consequuntur quae corrupti enim quia
-                nesciunt sequi exercitationem accusantium distinctio
-                voluptatem.</span
-              >
-              <div class="icon_t">&#8222;</div>
-            </div>
-          </div>
-        </div> -->
-      <div class="before_footer">Like-themes © All Rights Reserved - 2020</div>
-    </main>
+        <div class="before_footer">
+          Like-themes © All Rights Reserved - 2020
+        </div>
+      </main>
+    </div>
 
     <footer>
       <div class="footer">
